--- a/P-Website/index.html
+++ b/P-Website/index.html
@@ -12,7 +12,7 @@
   <!-- <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script> -->
   <script type="text/javascript" src="js/jquery.particleground.js"></script>
   <script type="text/javascript" src="js/demo.js"></script>
-  <audio autoplay loop src="assets/music.mp3"></audio>
+  <audio autoplay loop src="assets/music2.mp3"></audio>
   </audio>
   
   
